--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   "author": "JWilkerson",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/lib-dynamodb": "^3.778.0",
+    "bcryptjs": "^3.0.2",
     "rimraf": "^5.0.5",
     "vite-plugin-dts": "^3.7.3"
   },
   "devDependencies": {
+    "jest": "^27.0.0",
     "ts-jest": "^27.0.0",
-    "typescript": "^4.0.0",
-    "jest": "^27.0.0"
+    "typescript": "^4.0.0"
   }
 }
