--- a/tweeter-server/package.json
+++ b/tweeter-server/package.json
@@ -12,9 +12,15 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.779.0",
+    "@aws-sdk/lib-dynamodb": "^3.778.0",
+    "bcryptjs": "^3.0.2",
     "date-fns": "^3.3.1",
     "rimraf": "^6.0.1",
     "tweeter-shared": "file:../tweeter-shared",
     "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "@types/bcryptjs": "^2.4.6"
   }
 }
